Update dependencies, CSS.
